{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 1692,
  "lineage": "eaf775ba-635b-3f25-5022-2df8a7f0bf3a",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/cityscout-390219/regions/us-west3/instanceGroups/api-group-manager",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 0,
            "creation_timestamp": "2023-06-24T20:20:09.004-07:00",
            "enable_cdn": false,
            "fingerprint": "95bbBKujhjo=",
            "generated_id": 6051671745675005062,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/cityscout-390219/global/healthChecks/http-basic-check-api"
            ],
            "id": "projects/cityscout-390219/global/backendServices/backend-service-api",
            "load_balancing_scheme": "EXTERNAL_MANAGED",
            "name": "backend-service-api",
            "port_name": "http",
            "project": "cityscout-390219",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cityscout-390219/global/backendServices/backend-service-api",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "data.google_compute_image.gce_container_vm_image",
            "google_compute_health_check.api",
            "google_compute_instance_template.api",
            "google_compute_region_instance_group_manager.api",
            "module.api-container.data.google_compute_image.coreos"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/cityscout-390219/regions/us-west3/instanceGroups/web-group-manager",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 0,
            "creation_timestamp": "2023-06-24T20:20:08.496-07:00",
            "enable_cdn": false,
            "fingerprint": "AH9l5vtuqo8=",
            "generated_id": 782267565253201031,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/cityscout-390219/global/healthChecks/http-basic-check-web"
            ],
            "id": "projects/cityscout-390219/global/backendServices/backend-service-web",
            "load_balancing_scheme": "EXTERNAL_MANAGED",
            "name": "backend-service-web",
            "port_name": "http",
            "project": "cityscout-390219",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cityscout-390219/global/backendServices/backend-service-web",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "data.google_compute_image.gce_container_vm_image",
            "google_compute_health_check.web",
            "google_compute_instance_template.web",
            "google_compute_region_instance_group_manager.web",
            "module.web-container.data.google_compute_image.coreos"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3000",
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-06-24T20:19:34.008-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/cityscout-390219/global/firewalls/fw-allow-health-check",
            "log_config": [],
            "name": "fw-allow-health-check",
            "network": "https://www.googleapis.com/compute/v1/projects/cityscout-390219/global/networks/default",
            "priority": 1000,
            "project": "cityscout-390219",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cityscout-390219/global/firewalls/fw-allow-health-check",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "allow-health-check"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.160.105.234",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-06-24T20:19:33.816-07:00",
            "id": "projects/cityscout-390219/global/addresses/lb-ipv4-1",
            "name": "lb-ipv4-1",
            "prefix_length": 0,
            "project": "cityscout-390219",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cityscout-390219/global/addresses/lb-ipv4-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/cityscout-390219/global/forwardingRules/http-content-rule",
            "ip_address": "34.160.105.234",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL_MANAGED",
            "name": "http-content-rule",
            "port_range": "443-443",
            "project": "cityscout-390219",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cityscout-390219/global/forwardingRules/http-content-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/cityscout-390219/global/targetHttpsProxies/https-proxy"
          },
          "dependencies": [
            "data.google_compute_image.gce_container_vm_image",
            "google_compute_backend_service.api",
            "google_compute_backend_service.web",
            "google_compute_global_address.default",
            "google_compute_health_check.api",
            "google_compute_health_check.web",
            "google_compute_instance_template.api",
            "google_compute_instance_template.web",
            "google_compute_managed_ssl_certificate.cityscout_managed_certificate",
            "google_compute_region_instance_group_manager.api",
            "google_compute_region_instance_group_manager.web",
            "google_compute_target_https_proxy.default",
            "google_compute_url_map.default",
            "module.api-container.data.google_compute_image.coreos",
            "module.web-container.data.google_compute_image.coreos"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_https_proxy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-06-25T14:06:58.158-07:00",
            "id": "projects/cityscout-390219/global/targetHttpsProxies/https-proxy",
            "name": "https-proxy",
            "project": "cityscout-390219",
            "proxy_bind": false,
            "proxy_id": 7586990715678560925,
            "quic_override": "NONE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cityscout-390219/global/targetHttpsProxies/https-proxy",
            "ssl_certificates": [
              "https://www.googleapis.com/compute/v1/projects/cityscout-390219/global/sslCertificates/cityscout"
            ],
            "url_map": "https://www.googleapis.com/compute/v1/projects/cityscout-390219/global/urlMaps/http-url-map"
          },
          "dependencies": [
            "data.google_compute_image.gce_container_vm_image",
            "google_compute_backend_service.api",
            "google_compute_backend_service.web",
            "google_compute_health_check.api",
            "google_compute_health_check.web",
            "google_compute_instance_template.api",
            "google_compute_instance_template.web",
            "google_compute_managed_ssl_certificate.cityscout_managed_certificate",
            "google_compute_region_instance_group_manager.api",
            "google_compute_region_instance_group_manager.web",
            "google_compute_url_map.default",
            "module.api-container.data.google_compute_image.coreos",
            "module.web-container.data.google_compute_image.coreos"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-06-24T20:21:42.760-07:00",
            "default_route_action": [],
            "default_service": "",
            "default_url_redirect": [
              {
                "host_redirect": "",
                "https_redirect": true,
                "path_redirect": "/",
                "prefix_redirect": "",
                "redirect_response_code": "",
                "strip_query": false
              }
            ],
            "description": "",
            "fingerprint": "FOT8_Jv46lM=",
            "header_action": [],
            "host_rule": [
              {
                "description": "",
                "hosts": [
                  "*"
                ],
                "path_matcher": "all"
              }
            ],
            "id": "projects/cityscout-390219/global/urlMaps/http-url-map",
            "map_id": 1518742568324172841,
            "name": "http-url-map",
            "path_matcher": [
              {
                "default_route_action": [],
                "default_service": "https://www.googleapis.com/compute/v1/projects/cityscout-390219/global/backendServices/backend-service-web",
                "default_url_redirect": [],
                "description": "",
                "header_action": [],
                "name": "all",
                "path_rule": [
                  {
                    "paths": [
                      "/api/*"
                    ],
                    "route_action": [],
                    "service": "https://www.googleapis.com/compute/v1/projects/cityscout-390219/global/backendServices/backend-service-api",
                    "url_redirect": []
                  }
                ],
                "route_rules": []
              }
            ],
            "project": "cityscout-390219",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cityscout-390219/global/urlMaps/http-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.google_compute_image.gce_container_vm_image",
            "google_compute_backend_service.api",
            "google_compute_backend_service.web",
            "google_compute_health_check.api",
            "google_compute_health_check.web",
            "google_compute_instance_template.api",
            "google_compute_instance_template.web",
            "google_compute_region_instance_group_manager.api",
            "google_compute_region_instance_group_manager.web",
            "module.api-container.data.google_compute_image.coreos",
            "module.web-container.data.google_compute_image.coreos"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}